package nl.vtek.names.game.model;

public enum CardType {
    TEAM1, TEAM2, NEUTRAL, ASSASSIN
}
