package nl.vtek.names.game.model;

public enum GameState {
    CREATING,
    READY,
    ARCHIVED
}

