---
title: Back-end
---
classDiagram
    %% Art package
    class ArtWork {
        -int id
        -String imageId
        -String title
        -String artistDisplay
        -String dateDisplay
    }

    class ArtWorkResponse {
        <<record>>
        +int id
        +String title
        +String artistDisplay
        +String dateDisplay
        +String imageUrl
    }

    class ArticResponse {
        <<record>>
        +List~ArticDto~ pulledData
    }

    class ArticDto {
        <<record>>
        +int id
        +String title
        +String artistDisplay
        +String imageId
        +String dateDisplay
    }

    class ArtWorkMapper {
        <<component>>
        -String IIIF_ARTIC_BASE_URL
        +toEntity(ArticDto) ArtWork
        +toResponse(ArtWork, int) ArtWorkResponse
    }

    class ArtWorkService {
        <<service>>
        +searchArtworks(int) List~ArtWorkResponse~
    }

    class ArticClient {
        <<component>>
        -RestClient restClient
        +searchArtworks(int) ArticResponse
    }

    class ArticApi {
        <<external>>
        api.artic.edu
    }

    class ArtWorkController {
        <<restcontroller>>
        +getArtworks(int) List~ArtWorkResponse~
    }

    ArtWork <.. ArtWorkMapper
    ArtWorkResponse <.. ArtWorkMapper
    ArticResponse <.. ArticClient
    ArticResponse *-- ArticDto
    ArticDto <.. ArtWorkMapper
    ArtWorkMapper <-- ArtWorkService
    ArticClient <-- ArtWorkService
    ArtWorkService <-- ArtWorkController
    ArticClient --> ArticApi

    %% Game package
    class Game {
        <<entity>>
        -int id
        -GameState state
        -int maxScore
        -LocalDateTime createdAt
        -List~Card~ cards
        -List~Hint~ hints
    }

    class GameState {
        <<enumeration>>
        CREATING
        READY
        ARCHIVED
    }

    class Card {
        <<entity>>
        -UUID id
        -Game game
        -CardType type
        -String imageUrl
        -String title
        -String artistDisplay
        -String dateDisplay
        -boolean isSpymasterPick
    }

    class CardType {
        <<enumeration>>
        TEAM1
        TEAM2
        NEUTRAL
        ASSASSIN
    }

    class CardResponse {
        <<dto>>
        -UUID cardId
        -int gameId
        -String imageUrl
        -String title
        -String artistDisplay
        -String dateDisplay
        -String altText
        -boolean spymasterPick
        -CardType cardType
    }

    class HintResponse {
        <<dto>>
        -UUID id
        -int gameId
        -String content
    }

    class CardMapper {
        <<mapper>>
        +toCardResponse(List~Card~) List~CardResponse~
    }

    class GameMapper {
        <<mapper>>
        +toEntity() Game
    }

    class HintMapper {
        <<mapper>>
        +toHintResponse(Hint) HintResponse
    }

    class UpdateCardsRequest {
        <<dto>>
        -List~UUID~ cardIds
        -Boolean spymasterPick
    }

    class HintRequest {
        <<dto>>
        -int gameId
        -String content
    }

    class GameRepository {
        <<interface>>
    }

    class CardRepository {
        <<interface>>
    }

    class HintRepo {
        <<interface>>
        +findByGame_Id(int) Optional~Hint~
    }

    class GameService {
        <<service>>
        -int BOARD_SIZE = 16
        +startGame() List~CardResponse~
        +getGame(int) List~CardResponse~
        +updateCards(List~UUID~, Boolean) void
        +checkCards(List~UUID~) Map~UUID, Boolean~
    }

    class GameController {
        <<restcontroller>>
        +startGame() List~CardResponse~
        +getGame(int) List~CardResponse~
        +updateCards(UpdateCardsRequest) void
        +checkCards(List~UUID~) Map~UUID, Boolean~
    }

    class Hint {
        <<entity>>
        -UUID id
        -String content
        -Game game
    }

    class HintService {
        <<service>>
        +createHint(HintRequest) void
        +getHintByGameId(int) Optional~HintResponse~
    }

    class HintController {
        <<restcontroller>>
        +getHintByGameId(int) ResponseEntity~HintResponse~
        +createHint(HintRequest) void
    }

    Game "1" --> "*" Card
    Game "1" --> "*" Hint
    GameState <-- Game
    CardType <-- Card

    CardRepository <-- GameService
    GameService <-- GameController
    GameController ..> UpdateCardsRequest
    GameService --> ArtWorkService

    HintRepo <-- HintService
    HintService <-- HintController
    HintController ..> HintRequest
